	go through the name string and change all of the /'s to -'s. Then 
	again, this might not be a problem with PDF itself, but is certainly 
	a problem with the lexers in xpdf, gv and acroread and therefore is 
	an issue.

  * Moved all the headers into panda/, which means the demo app can now use 
	the same path for the includes as the real applications that users
	would be writing. This means that the demo application had to be
	renamed to pandademo (from panda).

  * extern "C"'ed all of the headers so that they are accessible from C++

  * Defined #defines so that headers are only included once at compilation
	time

  * Fixed the Makefile.am so that the man pages are installed as well...

  * Discovered that the Makefile.am needs to be changed for that the headers
	will install from their new location in panda/, so I had a look into
	that as well...

========================== 0.3.1 Released =====================================

  * Implemented xmalloc in memory.c so that I could simplify the malloc calls
	in the rest of the code in the library... Also changed all of the 
	malloc calls in the library to use it...

  * Resolved the namespace problems by renaming all function calls to use
	the naming scheme "panda_<<>>". There are #defines to the old names in
	panda/legacy.h

  * Note that the namespace changes were partially made by a script, so if 
	 there are any typos, could you please let me know... Things still
	 compile, so at least the typos are consistent.
	
  * Implemented template pages for PDF documents. These are used via the
	panda_createtemplate and panda_pagefromtemplate calls.

  * Fixed the namespace on variable names as well... This included moving some
	stuff out of the gcc reserved namespace (__*) in objects.h.

  * The namespace changes were lots of fun (not). I suggest that no-one ever
	do them again...

  * Added legacymain.c to check that the legacy function mappings and stuff
	actually work