@@ -2,4 +2,8 @@ This file documents work that is currently being undertaken on the Panda codebas
 
   * Lexer development (opening PDF documents for modification)
 
-  * Implementation of automake and stuff like that
+  * Lines and curves and stuff
+
+  * Namespace changes
+
+  * Template pages
