@@ -54,8 +54,10 @@ extern char gBinaryHeaderString[12];
 
 // Standard page sizes -- these are expressed in inches, with 72 dots per inch
 // with no fractional values shown. As many values as needed can be added here
-#define  gPageSizeA4        "[0 0 594 841]"
-#define  gPageSizeUsLetter  "[0 0 612 792]"
+#define  gPageSizeA4                "[0 0 594 841]"
+#define  gPageSizeUsLetter          "[0 0 612 792]"
+#define  gPageSizeTemplateA4        "TEMPLATE [0 0 594 841]"
+#define  gPageSizeTemplayeUsLetter  "TEMPLATE [0 0 612 792]"
 
 // We have the concept of placeholder objects, that do not get written out to
 // the PDF
